<resources>
    <string name="app_name">Platform_Doctor</string>
    <string name="lbs_but">百度地圖</string>
    <string name="map">地圖</string>
    <string name="find">查找</string>
    <string name="fav">喜愛</string>
    <string name="set">設置</string>
    <string name="add_but1">增加數據</string>
    <string name="delete_but1">刪除數據</string>
    <string name="change_but1">改動數據</string>
    <string name="search_but1">查找數據</string>
    <string name="name_edit1">姓 名</string>
    <string name="address_edit1">家庭住址</string>
    <string name="phone_edit1">電 話</string>
    <string name="age_edit1">年 齡</string>
</resources>
