<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_map"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_location"
        android:title="@string/map" />

    <item
        android:id="@+id/bottom_nav_find"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_find_replace"
        android:title="@string/find" />

    <item
        android:id="@+id/bottom_nav_fav"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_favourite"
        android:title="@string/fav" />

    <item
        android:id="@+id/bottom_nav_set"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_set"
        android:title="@string/set" />
</menu>